# axum-auth-test

./: Cargo.toml  Makefile
src/: auth.rs  main.rs  protected.rs
src/config/: auth.rs
src/routes/: auth.rs
